# pixel

./: .clang-format  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  deploy-website.yml
benchmarks/: fib.pixel  game_loop.pixel  list_ops.pixel  string_ops.pixel
docs/: getting-started.md  index.md  installation.md
docs/api/: animation.md  audio.md  camera.md  core.md  engine.md  index.md  input.md  math.md  particles.md  physics.md  scenes.md
docs/guides/: debugging.md  game-loop.md  index.md  structuring-games.md
docs/language/: basics.md  control-flow.md  data-structures.md  functions.md  index.md
examples/: advanced_features.pixel  aot_test.pixel  audio_demo.pixel  input_demo.pixel  physics_demo.pixel  web_demo.pixel
examples/games/: breakout.pixel  platformer.pixel  pong.pixel  shooter.pixel
scripts/: build-web.sh  ci-local.sh  install.sh
src/: main.c
src/aot_runtime/: px_runtime.c  px_runtime.h
src/compiler/: analyzer.c  analyzer.h  ast.c  ast.h  ccodegen.c  ccodegen.h  codegen.c  codegen.h  lexer.c  lexer.h  parser.c  parser.h  symbols.c  symbols.h  token.c  token.h  typechecker.c  typechecker.h  types.c  types.h
src/core/: arena.c  arena.h  array.h  common.h  error.c  error.h  log.c  log.h  strings.c  strings.h  table.c  table.h
src/engine/: engine.c  engine.h  engine_internal.h  engine_natives.c  engine_natives.h  physics.c  physics.h  ui.c  ui.h  ui_menus.c  ui_menus.h  ui_natives.c  ui_natives.h
src/pal/: pal.c  pal.h  pal_mock.c  pal_sdl.c
src/runtime/: stdlib.c  stdlib.h
src/vm/: chunk.c  chunk.h  debug.c  debug.h  gc.c  gc.h  object.c  object.h  opcodes.c  opcodes.h  value.c  value.h  vm.c  vm.h
tests/: CMakeLists.txt  test_framework.h  test_helpers.h
tests/integration/: test_e2e.c  test_examples.c  test_pal_sdl.c
tests/unit/: test_analyzer.c  test_arena.c  test_array.c  test_ast.c  test_chunk.c  test_codegen.c  test_debug.c  test_engine.c  test_engine_game_loop.c  test_engine_natives.c  test_error.c  test_gc.c  test_lexer.c  test_log.c  test_main.c  test_object.c  test_opcodes.c  test_pal.c  test_parser.c  test_physics.c  test_stdlib.c  test_strings.c  test_symbols.c  test_table.c  test_token.c  test_ui.c  test_ui_docs.c  test_value.c  test_vm.c
web/: shell.html
website/: SEO-SETUP.md  astro.config.mjs  package-lock.json  package.json
website/public/: no-cache.js  pixel.js  robots.txt
website/public/wasm/: pixel.js  pixel.wasm
website/src/components/: Footer.astro  Header.astro  SEO.astro  StructuredData.astro  ThemeToggle.astro
website/src/layouts/: BaseLayout.astro
website/src/pages/: index.astro  playground.astro
website/src/pages/docs/: [...slug].astro  index.astro
website/src/styles/: global.css
